# Whisperflowactions

./: .env  .env.example  .gitignore  Dockerfile  README.md  _test_hotkey.py  docker-compose.yml  package.json  pyproject.toml  requirements.txt  run_jarvis.bat  run_jarvis.ps1  run_mcp_server.bat  run_mcp_server.ps1  setup.ps1  setup.sh
core/: __init__.py  action_memory.py  action_router.py  agent_manager.py  audio_capture.py  block_detector.py  brain_router.py  browser_llm.py  context_collector.py  doctor.py  feedback_store.py  hardware_checker.py  intent_parser.py  intent_sequencer.py  memory_store.py  ocr_adapter.py  ocr_engine.py  orchestrator.py  overwatch.py  planner.py  platform_utils.py  plugin_manager.py  semantic_matcher.py  setup_wizard.py  stt_engine.py  stt_parakeet.py  stt_whisper_cpp.py  teach_mode.py  telemetry.py  tts_edge.py  tts_engine.py  tts_kokoro.py  tts_piper.py  vad.py  vision_assistant.py  vision_directml.py  vision_engine.py
data/: feedback.db  stress_feedback.db
docs/: JARVIS_COMMANDS.md  plan.md  reflexes.md
executors/: __init__.py  base_executor.py  browser_executor.py  calendar_executor.py  chat_executor.py  gmail_executor.py  pc_executor.py  verification.py  whatsapp_executor.py
mcp_server/: __init__.py  agent.py  prompts.py  resources.py  server.py  tools_browser.py  tools_composio.py  tools_exa.py  tools_fs.py  tools_reflex.py
models/: intent_schema.py
plugins/: __init__.py  _template.py
scripts/: benchmark_stt.py  comprehensive_test.py  docker-entrypoint.sh  download_binaries.ps1  quick_check.py  real_app_entrypoints.py  (+8 more)
(+44 files in other folders)
